--- a/netlify.toml
+++ b/netlify.toml
@@ -1,19 +1,20 @@
 [build]
+  # This command is essential to install Flask, Firebase, etc.
+  command = "pip install -r requirements.txt"
   publish = "public"
 
-[build.environment]
-  # Python version for the build
+  [build.environment]
   PYTHON_VERSION = "3.9"
 
 [functions]
   directory = "netlify/functions"
-  python_runtime = "3.9"
+  # DO NOT add the python_runtime line here
 
 [[redirects]]
-  from = "/.netlify/functions/recipe-api"
-  to = "/.netlify/functions/recipe-api"
+  # This makes your function available at yoursite.com/api/
+  from = "/api/*"
+  to = "/.netlify/functions/recipe-api/:splat"
   status = 200
-  force = true
 
 [[headers]]
   for = "/*"
